snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.md5
34bbc84b8695eee9d8d5d5c38a0b94d3